[package]
name = "aoc20"
version = "0.1.0"
authors = ["IndianBoy42 <rohanmed123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
fxhash = "0.2.1"
ndarray = "0.14.0"
bit-set = "0.5.2"
bitvec = "0.19.4"
rayon = "1.5.0"
regex = "1.4.2"
arrayvec = "0.5.2"
lazy_static = "1.4.0"
boolinator = "2.4.0"
derive_more = "0.99.11"

[dev-dependencies]
criterion = "0.3.3"

[profile.release]
panic = "abort"
lto = true

[[bench]]
name = "alldays"
harness = false
