[package]
name = "aoc20"
version = "0.1.0"
authors = ["IndianBoy42 <rohanmed123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
fxhash = "0.2.1"
bit-set = "0.5.2"
rayon = "1.5.0"
arrayvec = "0.5.2"
boolinator = "2.4.0"
crossbeam = "0.8.0"


[dev-dependencies]
criterion = "0.3.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"

[profile.bench]
panic = "abort"
codegen-units = 1
lto = "thin"

[[bench]]
name = "alldays"
harness = false
