[package]
name = "aoc20"
version = "0.1.0"
authors = ["IndianBoy42 <rohanmed123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
fxhash = "0.2.1"
bit-set = "0.5.2"
rayon = "1.5.0"
arrayvec = "0.5.2"
boolinator = "2.4.0"
num-bigint = "0.3.1"
num = "0.3.1"
num-traits = "0.2.14"
regex = "1.4.2"
lazy_static = "1.4.0"

[dependencies.ndarray]
version = "0.14.0"
features = ["rayon"]

[dev-dependencies]
criterion = "0.3.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
rustflags = ["-C", "target-cpu=native"]

[profile.bench]
panic = "abort"
codegen-units = 1
lto = "thin"
rustflags = ["-C", "target-cpu=native"]

[[bench]]
name = "alldays"
harness = false

